# billyjoule

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  billyjoule.env.sample  docker-compose.yml  justfile
.github/workflows/: check-n-test.yaml
kubernetes/: deployment.yaml  kustomization.yaml  meili-secret.yaml  ns.yaml  sa.yaml  secret.yaml  ss-meili.yaml  svc-meili.yaml
meili/: docker-compose.yml
src/: main.rs
src/commands/: mod.rs
src/commands/emoji/: mod.rs
src/commands/exit/: mod.rs
src/commands/llama/: mod.rs
src/commands/stats/: mod.rs
src/commands/stonks/: mod.rs
src/controllers/: mod.rs
src/models/: handler.rs  mod.rs  sweeper.rs
